# mobot

./: door.sh  gamestate.sh  nav2_params.yaml  readme.md
custom_nav/: CMakeLists.txt  package.xml
custom_nav/action/: Sendgoalpose.action
custom_nav/launch/: bringup_launch.py  game_controller_launch.py  multi_localization_launch.py  multi_navigation_launch.py
custom_nav/maps/: map.pgm  map.yaml  map1.pgm  map1.yaml
custom_nav/maps/ap/: map.pgm  map.yaml
custom_nav/maps/map/: map.pgm  map.yaml
custom_nav/maps/mapbeforehighres/: map.yaml
custom_nav/maps/oldmap/: map.pgm  map.yaml
custom_nav/maps/olmap/: map.pgm  map.yaml
custom_nav/maps/omap/: map.pgm  map.yaml
custom_nav/msg/: Gamecontroller.msg  RobotPose.msg
custom_nav/oldfile/: publisher.py  sendgoalposeclient.py  sub.py
custom_nav/params/: a0.yaml  a1.yaml  amcl_0.yaml  bt.xml  burger.yaml  default11111.yaml  initpose.yaml  nav2_multirobot_params_1.yaml  tb3_0param.yaml  tb3_1param.yaml  xxx.yaml
custom_nav/rviz/: new.rviz  part1betyungmaised.rviz  rviz.rviz  tb3_navigation2.rviz
custom_nav/scripts/: game_controller.py  initial_pose.py  monitor.py  robot0.py  robot1.py  robotpose.py  sendgoalpose.py  test.py  utils.py
custom_nav/srv/: Monitorcontinuous.srv  Monitorstart.srv
sim/: CMakeLists.txt  package.xml
sim/launch/: fibot_description.launch.py  main.launch.py
sim/rviz/: urdf.rviz
sim/urdf/: Rehri_gazebo_rviz.urdf  turtlebot3_burger.urdf  turtlebot3_waffle.urdf  turtlebot3_waffle_pi.urdf  xxx.urdf
sim/worlds/: world.world
turtlebot3_simulations/: .pgm  .yaml  map.pgm  map.yaml  nav2_params.yaml
turtlebot3_simulations/turtlebot3_gazebo/models/turtlebot3_burger/: model-1_4.sdf  model.sdf
(+7 files in other folders)
